added page title

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Matchy Matchy by Qit</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
